Archive2/80/5e5130c02220d6/output
main.cpp:123:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
